--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.10.0",
     "bcrypt": "^5.0.1",
     "big.js": "^6.2.1",
     "cloudinary": "^1.25.1",
@@ -27,6 +28,8 @@
     "nodemon": "^2.0.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "qrcode-svg": "^1.1.0",
+    "stripe": "^10.10.0",
     "validator": "^13.6.0"
   }
 }
