--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "nodemon --verbose server.js"
   },
+  "engines" : {
+    "npm" : "10.9.0",
+    "node" : "22.10.0"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
